--- a/config.env
+++ b/config.env
@@ -1,2 +1,5 @@
 DATABASE=mongodb+srv://lokman:<password>@cluster0.udklblp.mongodb.net/?retryWrites=true&w=majority
 PASSWORD=lokman
+
+JWT_SECRET=mY-SECRET
+JWT_EXPIRE_IN=90d
