--- a/config.env
+++ b/config.env
@@ -3,3 +3,8 @@ PASSWORD=lokman
 
 JWT_SECRET=mY-SECRET
 JWT_EXPIRE_IN=90d
+
+EMAIL_USERNAME=9426adaae6aed4
+EMAIL_PASSWORD=6c17689ebdbcfd
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=25
