--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "promisify": "^0.0.3",
     "util": "^0.12.4"
